--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 /target
 /classes
 /checkouts
+profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
 *.class
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
+/out
+/.repl
+*.log
+/.env
+/.sass-cache
+/.idea
+.projectile
+/.DS_Store
